# bits

./: CMakeLists.txt
include/river/: bits.hpp
tests/: CMakeLists.txt  catch.hpp  main.cpp
